--- a/po/el.po
+++ b/po/el.po
@@ -7,10 +7,10 @@
 # Michael Misirlis <mmisirlis@gmail.com>, 2015
 msgid ""
 msgstr ""
-"Project-Id-Version: Geany 1.25\n"
+"Project-Id-Version: Geany 1.26\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-01 19:03+0100\n"
-"PO-Revision-Date: 2015-10-30 12:52+0200\n"
+"POT-Creation-Date: 2015-11-04 02:36+0000\n"
+"PO-Revision-Date: 2015-11-04 13:35+0200\n"
 "Last-Translator: Michael Misirlis <mmisirlis@gmail.com>\n"
 "Language-Team: Greek\n"
 "Language: el\n"
@@ -2151,8 +2151,8 @@ msgstr "Ιδιότητες Έργου"
 msgid "Filename:"
 msgstr "Όνομα αρχείου:"
 
-#: ../data/geany.glade.h:460 ../src/project.c:169 ../plugins/classbuilder.c:467
-#: ../plugins/classbuilder.c:477
+#: ../data/geany.glade.h:460 ../src/project.c:169
+#: ../plugins/classbuilder.c:467 ../plugins/classbuilder.c:477
 msgid "Name:"
 msgstr "Όνομα:"
 
@@ -2391,13 +2391,13 @@ msgstr ""
 "είσοδο (πατήστε τα πλήκτρα Ctrl+C ή Enter για να το καθαρίσετε)."
 
 #: ../src/build.c:912
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute terminal command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Δεν ήταν δυνατόν να εκτελεστεί το εργαλείο grep '%s', ελέγξτε τη διαδρομή "
-"ρυθμίσεων στις Ιδιότητες."
+"Δεν ήταν δυνατόν να εκτελεστεί η εντολή τερματικού \"%s\": %s. Ελέγξτε τη "
+"ρύθμιση διαδρομής στις Ιδιότητες."
 
 #: ../src/build.c:1020
 msgid "Compilation failed."
@@ -2582,21 +2582,17 @@ msgstr "Δεν ήταν δυνατόν το άνοιγμα του αρχείου
 
 #: ../src/callbacks.c:1473
 msgid "Check the path setting in Filetype configuration."
-msgstr ""
+msgstr "Ελέγξτε τις ρυθμίσεις διαδρομής στις ρυθμίσεις Τύπου Αρχείων."
 
 #: ../src/callbacks.c:1478
-#, fuzzy
 msgid "Check the path setting in Preferences."
-msgstr ""
-"Δεν ήταν δυνατόν να εκτελεστεί το εργαλείο grep '%s', ελέγξτε τη διαδρομή "
-"ρυθμίσεων στις Ιδιότητες."
+msgstr "Ελέγξτε τη ρύθμιση διαδρομής στις Ιδιότητες."
 
 #. G_SHELL_ERROR is parsing error, it may be caused by %s word with quotes
 #: ../src/callbacks.c:1491
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot execute context action command \"%s\": %s. %s"
-msgstr ""
-"Δεν ήταν δυνατόν να εκτελεστεί η προσαρμοσμένη εξωτερική εντολή %s' (%s)."
+msgstr "Αδυναμία εκτέλεσης εντολής δράσης πλαισίου \"%s\": %s. %s"
 
 #: ../src/dialogs.c:160 ../src/document.c:2308 ../src/document.c:2373
 #: ../src/document.c:2381
@@ -2849,7 +2845,7 @@ msgstr ", μόνο για ανάγνωση"
 
 #: ../src/document.c:1627
 msgid "Discard history"
-msgstr ""
+msgstr "Απόρριψη ιστορικού"
 
 #: ../src/document.c:1628
 msgid ""
@@ -2858,11 +2854,14 @@ msgid ""
 "will not be displayed again but Your choice can be changed in the various "
 "preferences."
 msgstr ""
+"Η προηγούμενη κατάσταση του buffer  αποθηκεύεται στο ιστορικό, και "
+"επανέρχεται μέσω των αναιρέσεων. Μπορείτε να το απενεργοποιήσετε αυτό, "
+"διαγράφοντας το ιστορικό κατά τη φόρτωση. Αυτό το μήνυμα δεν θα εμφανιστεί "
+"ξανά, αλλά η επιλογή σας μπορεί να αλλαχθεί από τις διάφορες ιδιότητες."
 
 #: ../src/document.c:1632
-#, fuzzy
 msgid "The file has been reloaded."
-msgstr "Αυτό το έγγραφο έχει κλείσει."
+msgstr "Το αρχείο επαναφορτώθηκε."
 
 #: ../src/document.c:1662
 msgid "Any unsaved changes will be lost."
@@ -4175,13 +4174,13 @@ msgstr ""
 "%s"
 
 #: ../src/printing.c:615
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute print command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Δεν ήταν δυνατόν να εκτελεστεί το εργαλείο grep '%s', ελέγξτε τη διαδρομή "
-"ρυθμίσεων στις Ιδιότητες."
+"Αδυναμία εκτέλεσης εντολής εκτύπωσης \"%s\": %s. Ελέγξτε τη ρύθμιση "
+"διαδρομής στις Ιδιότητες."
 
 #: ../src/printing.c:622
 #, c-format
@@ -4529,12 +4528,12 @@ msgid "%s %s -- %s (in directory: %s)"
 msgstr "%s %s -- %s (στο φάκελο: %s)"
 
 #: ../src/search.c:1718
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute grep tool \"%s\": %s. Check the path setting in Preferences."
 msgstr ""
-"Δεν ήταν δυνατόν να εκτελεστεί το εργαλείο grep '%s', ελέγξτε τη διαδρομή "
-"ρυθμίσεων στις Ιδιότητες."
+"Αδυναμία εκτέλεσης εργαλείου grep \"%s\": %s. Ελέγξτε τη ρύθμιση διαδρομής "
+"στις Ιδιότητες."
 
 #: ../src/search.c:1758
 #, c-format
@@ -4573,11 +4572,8 @@ msgstr ""
 "Αυτό είναι ένα καίριο σφάλμα και το Geany θα τερματίσει."
 
 #: ../src/spawn.c:90 ../src/spawn.c:140 ../src/spawn.c:184
-#, fuzzy
 msgid "Text ended before matching quote was found"
-msgstr ""
-"Το κείμενο τελείωσε χωρίς να βρεθεί απόσπασμα που να ταιριάζει για το %c. "
-"(Το κείμενο ήταν '%s')"
+msgstr "Το κείμενο τελείωσε χωρίς να βρεθεί απόσπασμα που να ταιριάζει"
 
 #. TL note: from glib
 #: ../src/spawn.c:126
@@ -4591,18 +4587,16 @@ msgstr ""
 "εισαγωγικών."
 
 #: ../src/spawn.c:254
-#, fuzzy
 msgid "Program not found"
-msgstr "Το πρόγραμμα '%s' δεν βρέθηκε"
+msgstr "Το πρόγραμμα δεν βρέθηκε"
 
 #: ../src/spawn.c:668
-#, fuzzy
 msgid "Failed to change to the working directory"
-msgstr "Η διαδικασία απέτυχε, δεν υπάρχει ο φάκελος εργασίας"
+msgstr "Αποτυχία αλλαγής του φακέλου εργασίας"
 
 #: ../src/spawn.c:673
 msgid "Unknown error executing child process"
-msgstr ""
+msgstr "Άγνωστο σφάλμα κατά την εκτέλεση θυγατρικής διεργασίας"
 
 #: ../src/stash.c:1150
 msgid "Name"
@@ -5001,6 +4995,8 @@ msgid ""
 "Cannot execute command \"%s\" from the template: %s. Check the path in the "
 "template."
 msgstr ""
+"Αδυναμία εκτέλεσης εντολής \"%s\" από το πρότυπο: %s. Ελέγξτε τη διαδρομή "
+"στο πρότυπο."
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:58
@@ -5179,13 +5175,13 @@ msgstr ""
 "εξόδου (exit code)."
 
 #: ../src/tools.c:242
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute custom command \"%s\": %s. Check the path setting in Custom "
 "Commands."
 msgstr ""
-"Δεν ήταν δυνατόν να εκτελεστεί το εργαλείο grep '%s', ελέγξτε τη διαδρομή "
-"ρυθμίσεων στις Ιδιότητες."
+"Αδυναμία εκτέλεσης προσαρμοσμένης εντολής \"%s\": %s. Ελέγξτε τη ρύθμιση "
+"διαδρομής στις Προσαρμοσμένες Εντολές."
 
 #: ../src/tools.c:357 ../src/tools.c:620
 msgid "Set Custom Commands"
@@ -5594,8 +5590,9 @@ msgstr "Χαρακτήρες HTML"
 msgid "Inserts HTML character entities like '&amp;'."
 msgstr "Εισάγει οντότητες HTML χαρακτήρων όπως &amp;'."
 
-#: ../plugins/htmlchars.c:40 ../plugins/export.c:38 ../plugins/filebrowser.c:51
-#: ../plugins/saveactions.c:44 ../plugins/splitwindow.c:35
+#: ../plugins/htmlchars.c:40 ../plugins/export.c:38
+#: ../plugins/filebrowser.c:51 ../plugins/saveactions.c:44
+#: ../plugins/splitwindow.c:35
 msgid "The Geany developer team"
 msgstr "Η δημιουργική ομάδα του Geany"
 
