--- a/po/fr.po
+++ b/po/fr.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Geany 1.25\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-01 19:03+0100\n"
-"PO-Revision-Date: 2015-09-10 14:45+0200\n"
+"PO-Revision-Date: 2015-11-04 18:21+0100\n"
 "Last-Translator: Colomban Wendling <ban@herbesfolles.org>\n"
 "Language-Team: French <geany-i18n@uvena.de>\n"
 "Language: fr\n"
@@ -2400,12 +2400,12 @@ msgstr ""
 "utilisateur. Utilisez Ctrl+C ou Entrée pour vider le terminal."
 
 #: ../src/build.c:912
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute terminal command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Impossible d'exécuter l'outil grep « %s » ; vérifiez la configuration du "
+"Impossible d'exécuter la commande du terminal « %s » : %s.  Vérifiez le "
 "chemin dans les préférences."
 
 #: ../src/build.c:1020
@@ -2587,22 +2587,18 @@ msgstr "Impossible d'ouvrir le fichier %s (fichier non trouvé)"
 
 #: ../src/callbacks.c:1473
 msgid "Check the path setting in Filetype configuration."
-msgstr ""
+msgstr "Vérifiez le chemin dans la configuration du type de fichier."
 
 #: ../src/callbacks.c:1478
-#, fuzzy
 msgid "Check the path setting in Preferences."
-msgstr ""
-"Impossible d'exécuter l'outil grep « %s » ; vérifiez la configuration du "
-"chemin dans les préférences."
+msgstr "Vérifiez le chemin dans les préférences."
 
 #. G_SHELL_ERROR is parsing error, it may be caused by %s word with quotes
 #: ../src/callbacks.c:1491
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot execute context action command \"%s\": %s. %s"
 msgstr ""
-"Impossible d'exécuter la commande « %s » configurée pour le programme "
-"externe (%s)."
+"Impossible d'exécuter la commande d'action contextuelle « %s » : %s.  %s"
 
 #: ../src/dialogs.c:160 ../src/document.c:2308 ../src/document.c:2373
 #: ../src/document.c:2381
@@ -2854,7 +2850,7 @@ msgstr ", lecture seule"
 
 #: ../src/document.c:1627
 msgid "Discard history"
-msgstr ""
+msgstr "Oublier l'historique"
 
 #: ../src/document.c:1628
 msgid ""
@@ -2863,11 +2859,14 @@ msgid ""
 "will not be displayed again but Your choice can be changed in the various "
 "preferences."
 msgstr ""
+"L'état précédent du document est enregistré dans l'historique et annuler le "
+"restaure.  Vous pouvez désactiver cela en oubliant l'historique lorsque un "
+"fichier est rechargé.  Ce message ne sera plus affiché, mais vous pouvez "
+"changer l'option dans le préférences diverses."
 
 #: ../src/document.c:1632
-#, fuzzy
 msgid "The file has been reloaded."
-msgstr "Le document a été fermé."
+msgstr "Le document a été rechargé."
 
 #: ../src/document.c:1662
 msgid "Any unsaved changes will be lost."
@@ -4010,6 +4009,9 @@ msgid ""
 "<i>Other plugins depend on this. Disable them first to allow deactivation.</"
 "i>\n"
 msgstr ""
+"\n"
+"<i>D'autres plugins dépendent de celui-ci.  Vous devez d'abord les "
+"désactiver pour pouvoir désactiver celui-ci.</i>\n"
 
 #. Four allocations is less than ideal but meh
 #: ../src/plugins.c:1602
@@ -4184,12 +4186,12 @@ msgstr ""
 "%s"
 
 #: ../src/printing.c:615
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute print command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Impossible d'exécuter l'outil grep « %s » ; vérifiez la configuration du "
+"Impossible d'exécuter la commande d'impression « %s » : %s.  Vérifiez le "
 "chemin dans les préférences."
 
 #: ../src/printing.c:622
@@ -4541,12 +4543,12 @@ msgid "%s %s -- %s (in directory: %s)"
 msgstr "%s %s -- %s (dans le dossier : %s)"
 
 #: ../src/search.c:1718
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute grep tool \"%s\": %s. Check the path setting in Preferences."
 msgstr ""
-"Impossible d'exécuter l'outil grep « %s » ; vérifiez la configuration du "
-"chemin dans les préférences."
+"Impossible d'exécuter l'outil grep « %s » : %s.  Vérifiez le chemin dans les "
+"préférences."
 
 #: ../src/search.c:1758
 #, c-format
@@ -4585,11 +4587,10 @@ msgstr ""
 "Ceci est une erreur fatale et Geany va maintenant fermer."
 
 #: ../src/spawn.c:90 ../src/spawn.c:140 ../src/spawn.c:184
-#, fuzzy
 msgid "Text ended before matching quote was found"
 msgstr ""
 "Le texte s'est terminé avant que des guillemets correspondants ne soient "
-"recontrés pour %c (le texte était « %s »)."
+"recontrés."
 
 #. TL note: from glib
 #: ../src/spawn.c:126
@@ -4603,19 +4604,16 @@ msgstr ""
 "guillemets"
 
 #: ../src/spawn.c:254
-#, fuzzy
 msgid "Program not found"
-msgstr "Programme « %s » introuvable"
+msgstr "Programme introuvable"
 
 #: ../src/spawn.c:668
-#, fuzzy
 msgid "Failed to change to the working directory"
-msgstr "Échec du processus, pas de dossier de travail"
+msgstr "Impossible de changer de dossier de travail"
 
 #: ../src/spawn.c:673
-#, fuzzy
 msgid "Unknown error executing child process"
-msgstr "erreur inconnue en essayant de lancer un processus pour %s"
+msgstr "Erreur inconnue lors de l'exécution du sous-processus"
 
 #: ../src/stash.c:1150
 msgid "Name"
@@ -5018,6 +5016,8 @@ msgid ""
 "Cannot execute command \"%s\" from the template: %s. Check the path in the "
 "template."
 msgstr ""
+"Impossible d'exécuter la commande « %s » depuis le modèle : %s.  Vérifiez le "
+"chemin dans le modèle."
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:58
@@ -5196,13 +5196,13 @@ msgstr ""
 "La commande personnalisée s'est terminée avec un code de retour d'erreur."
 
 #: ../src/tools.c:242
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute custom command \"%s\": %s. Check the path setting in Custom "
 "Commands."
 msgstr ""
-"Impossible d'exécuter l'outil grep « %s » ; vérifiez la configuration du "
-"chemin dans les préférences."
+"Impossible d'exécuter la commande personnalisée « %s » : %s.  Vérifiez le chemin dans "
+"la configuration des commandes personnalisées."
 
 #: ../src/tools.c:357 ../src/tools.c:620
 msgid "Set Custom Commands"
