--- a/po/nl.po
+++ b/po/nl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Geany 1.25\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-01 19:03+0100\n"
+"POT-Creation-Date: 2015-11-04 21:35+0100\n"
 "PO-Revision-Date: 2014-11-13 17:31+0100\n"
 "Last-Translator: Peter Scholtens <peter.scholtens@xs4all.nl>\n"
 "Language-Team: Dutch <geany-i18n@uvena.de>\n"
@@ -1254,7 +1254,9 @@ msgstr "Browser:"
 msgid ""
 "A terminal emulator command (%c is substituted with the Geany run script "
 "filename)"
-msgstr "Een terminalemulatorcommando (%c wordt vervangen door het Geany runscript bestandsnaam)"
+msgstr ""
+"Een terminalemulatorcommando (%c wordt vervangen door het Geany runscript "
+"bestandsnaam)"
 
 #: ../data/geany.glade.h:258
 msgid "Path (and possibly additional arguments) to your favorite browser"
@@ -1385,7 +1387,7 @@ msgstr "_Wijzigen"
 msgid "<b>Keyboard shortcuts</b>"
 msgstr "<b>Sneltoetsen</b>"
 
-#: ../data/geany.glade.h:286 ../src/plugins.c:1891 ../src/plugins.c:1928
+#: ../data/geany.glade.h:286 ../src/plugins.c:1894 ../src/plugins.c:1931
 #: ../src/prefs.c:1613
 msgid "Keybindings"
 msgstr "Sneltoetsen"
@@ -2121,8 +2123,8 @@ msgstr "Eigenschappen"
 msgid "Filename:"
 msgstr "Bestandsnaam:"
 
-#: ../data/geany.glade.h:460 ../src/project.c:169 ../plugins/classbuilder.c:467
-#: ../plugins/classbuilder.c:477
+#: ../data/geany.glade.h:460 ../src/project.c:169
+#: ../plugins/classbuilder.c:467 ../plugins/classbuilder.c:477
 msgid "Name:"
 msgstr "Naam:"
 
@@ -2241,7 +2243,8 @@ msgid ""
 "Enrico Tröger\n"
 "Frank Lanitz\n"
 "All rights reserved."
-msgstr "Auteursrecht (c) 2005-2015\n"
+msgstr ""
+"Auteursrecht (c) 2005-2015\n"
 "Colomban Wendling\n"
 "Nick Treleaven\n"
 "Matthew Brush\n"
@@ -2340,6 +2343,7 @@ msgid "Process failed (%s)"
 msgstr "Proces mislukt (%s)"
 
 #: ../src/build.c:813
+#, c-format
 msgid "Invalid working directory \"%s\""
 msgstr "Kan werkmap niet veranderen naar '%s'"
 
@@ -2353,16 +2357,18 @@ msgstr ""
 msgid ""
 "File not executed because the terminal may contain some input (press Ctrl+C "
 "or Enter to clear it)."
-msgstr "Bestand niet uitgevoerd omdat de terminal wellicht invoer bevat (druk "
-"Ctrl+C of Enter om op te schonen."
+msgstr ""
+"Bestand niet uitgevoerd omdat de terminal wellicht invoer bevat (druk Ctrl+C "
+"of Enter om op te schonen."
 
 #: ../src/build.c:912
+#, c-format
 msgid ""
 "Cannot execute terminal command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Kan terminalprogramma '%s' niet uitvoeren: %s; controleer de padinstelling in "
-"Voorkeuren."
+"Kan terminalprogramma '%s' niet uitvoeren: %s; controleer de padnaaminstelling "
+"in Voorkeuren."
 
 #: ../src/build.c:1020
 msgid "Compilation failed."
@@ -2477,8 +2483,8 @@ msgid ""
 "%d, %e, %f, %p, %l are substituted in command and directory fields, see "
 "manual for details."
 msgstr ""
-"%d, %e, %f, %p, %l worden vervangen in de commando- en directoryvelden, zie de "
-"handleiding voor details."
+"%d, %e, %f, %p, %l worden vervangen in de commando- en directoryvelden, zie "
+"de handleiding voor details."
 
 #: ../src/build.c:2167
 msgid "Set Build Commands"
@@ -2552,6 +2558,7 @@ msgstr "Controleer padinstellingen bij Voorkeuren."
 
 #. G_SHELL_ERROR is parsing error, it may be caused by %s word with quotes
 #: ../src/callbacks.c:1491
+#, c-format
 msgid "Cannot execute context action command \"%s\": %s. %s"
 msgstr "Kan situatie specifieke commando '%s' niet uitvoeren (%s. %s)."
 
@@ -2813,10 +2820,12 @@ msgid ""
 "it. You can disable this by discarding the history upon reload. This message "
 "will not be displayed again but Your choice can be changed in the various "
 "preferences."
-msgstr "De vorige toestand van de buffer is opgeslagen in de geschiedenis en "
-"Ongedaan Maken haalt deze terug. Je kunt dit uitschakelen door de geschiedenis "
-"bij herladen uit te zetten. Deze mededeling zal niet opnieuw worden weegegeven "
-"maar je keuze kan gewijzigd worden in de diverse voorkeuren."
+msgstr ""
+"De vorige toestand van de buffer is opgeslagen in de geschiedenis en "
+"Ongedaan Maken haalt deze terug. Je kunt dit uitschakelen door de "
+"geschiedenis bij herladen uit te zetten. Deze mededeling zal niet opnieuw "
+"worden weegegeven maar je keuze kan gewijzigd worden in de diverse "
+"voorkeuren."
 
 #: ../src/document.c:1632
 msgid "The file has been reloaded."
@@ -2845,8 +2854,8 @@ msgid ""
 "An error occurred while converting the file from UTF-8 in \"%s\". The file "
 "remains unsaved."
 msgstr ""
-"Er deed zich een fout voor tijdens het omzetten van het bestand van UTF-8 "
-"in \"%s\". Het bestand blijft onopgeslagen."
+"Er deed zich een fout voor tijdens het omzetten van het bestand van UTF-8 in "
+"\"%s\". Het bestand blijft onopgeslagen."
 
 #: ../src/document.c:1912
 #, c-format
@@ -3945,18 +3954,17 @@ msgstr ""
 msgid "_Plugin Manager"
 msgstr "_Plugin beheer"
 
-#: ../src/plugins.c:1600
+#: ../src/plugins.c:1603
 msgid ""
 "\n"
 "<i>Other plugins depend on this. Disable them first to allow deactivation.</"
 "i>\n"
 msgstr ""
 "\n"
-"<i>Andere plug-ins zijn hiervan afhankelijk. Schakel die eerst uit.</"
-"i>\n"
+"<i>Andere plug-ins zijn hiervan afhankelijk. Schakel die eerst uit.</i>\n"
 
 #. Four allocations is less than ideal but meh
-#: ../src/plugins.c:1602
+#: ../src/plugins.c:1605
 #, c-format
 msgid ""
 "Version:\t%s\n"
@@ -3967,23 +3975,23 @@ msgstr ""
 "Auteur(s):\t%s\n"
 "Bestandsnaam:\t%s"
 
-#: ../src/plugins.c:1630
+#: ../src/plugins.c:1633
 msgid "No plugins available."
 msgstr "Geen plugins beschikbaar"
 
-#: ../src/plugins.c:1762
+#: ../src/plugins.c:1765
 msgid "Active"
 msgstr "Actief"
 
-#: ../src/plugins.c:1769
+#: ../src/plugins.c:1772
 msgid "Plugin"
 msgstr "Plugin"
 
-#: ../src/plugins.c:1876
+#: ../src/plugins.c:1879
 msgid "Plugins"
 msgstr "Plugins"
 
-#: ../src/plugins.c:1917
+#: ../src/plugins.c:1920
 msgid "Choose which plugins should be loaded at startup:"
 msgstr "Kies welke plugins bij het starten geladen moeten worden:"
 
@@ -4126,6 +4134,7 @@ msgstr ""
 "%s"
 
 #: ../src/printing.c:615
+#, c-format
 msgid ""
 "Cannot execute print command \"%s\": %s. Check the path setting in "
 "Preferences."
@@ -4165,7 +4174,8 @@ msgstr "Projectnaam"
 msgid ""
 "Path of the file representing the project and storing its settings. It "
 "should normally have the \"%s\" extension."
-msgstr "Pad naar het bestand dat het project representeerd and instellingen bewaard. "
+msgstr ""
+"Pad naar het bestand dat het project representeerd and instellingen bewaard. "
 "Het heeft normaliter de '%s' extensie."
 
 #: ../src/project.c:212 ../src/project.c:484
@@ -4480,11 +4490,12 @@ msgid "%s %s -- %s (in directory: %s)"
 msgstr "%s %s -- %s (in map: %s)"
 
 #: ../src/search.c:1718
+#, c-format
 msgid ""
 "Cannot execute grep tool \"%s\": %s. Check the path setting in Preferences."
 msgstr ""
-"Kan hulpprogramma grep '%s' niet uitvoeren: %s; controleer de padinstelling in "
-"Voorkeuren."
+"Kan hulpprogramma grep '%s' niet uitvoeren: %s; controleer de padinstelling "
+"in Voorkeuren."
 
 #: ../src/search.c:1758
 #, c-format
@@ -4942,7 +4953,9 @@ msgstr "Omzetting van sjabloon bestand '%s' naar UTF-8 mislukt"
 msgid ""
 "Cannot execute command \"%s\" from the template: %s. Check the path in the "
 "template."
-msgstr "Kan commando '%s' van sjabloon '%s' niet uitvoeren. Controleer pad in sjabloon"
+msgstr ""
+"Kan commando '%s' van sjabloon '%s' niet uitvoeren. Controleer pad in "
+"sjabloon"
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:58
@@ -5126,7 +5139,7 @@ msgid ""
 "Cannot execute custom command \"%s\": %s. Check the path setting in Custom "
 "Commands."
 msgstr ""
-"Kon aangepaste commando '%s' niet uitvoeren; controleer de padinstelling in "
+"Kon aangepaste commando '%s' niet uitvoeren: %s; controleer de padnaaminstelling in "
 "Aangepaste Commando's."
 
 #: ../src/tools.c:357 ../src/tools.c:620
@@ -5321,8 +5334,7 @@ msgstr ""
 
 #: ../src/ui_utils.c:747
 msgid "Date format string could not be converted (possibly too long)."
-msgstr ""
-"Datumformaatstring kon niet omgezet worden (waarschijnlijk te lang)."
+msgstr "Datumformaatstring kon niet omgezet worden (waarschijnlijk te lang)."
 
 #: ../src/ui_utils.c:822
 msgid "_Set Custom Date Format"
@@ -5409,8 +5421,9 @@ msgstr "_Invoermethoden"
 msgid ""
 "Directory not changed because the terminal may contain some input (press Ctrl"
 "+C or Enter to clear it)."
-msgstr "Map niet gewijzigd omdat de terminal wellicht invoer bevat (druk "
-"Ctrl+C of Enter om op te schonen."
+msgstr ""
+"Map niet gewijzigd omdat de terminal wellicht invoer bevat (druk Ctrl+C of "
+"Enter om op te schonen."
 
 #: ../src/win32.c:211
 msgid "Geany project files"
@@ -5536,8 +5549,9 @@ msgstr "HTML Karakters"
 msgid "Inserts HTML character entities like '&amp;'."
 msgstr "Voeg HTML karakters toe zoals '&amp;'."
 
-#: ../plugins/htmlchars.c:40 ../plugins/export.c:38 ../plugins/filebrowser.c:51
-#: ../plugins/saveactions.c:44 ../plugins/splitwindow.c:35
+#: ../plugins/htmlchars.c:40 ../plugins/export.c:38
+#: ../plugins/filebrowser.c:51 ../plugins/saveactions.c:44
+#: ../plugins/splitwindow.c:35
 msgid "The Geany developer team"
 msgstr "Het Geany ontwikkelingsteam"
 
