--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Geany 1.25\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-01 19:03+0100\n"
-"PO-Revision-Date: 2015-06-22 11:01+0300\n"
+"PO-Revision-Date: 2015-11-08 01:01+0300\n"
 "Last-Translator: Pavel Roschin <rpg89(at)post(dot)ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "Language: ru\n"
@@ -1574,7 +1574,6 @@ msgid "Follow path of the current file"
 msgstr "Устанавливать путь вслед за текущим файлом"
 
 #: ../data/geany.glade.h:328
-#, fuzzy
 msgid "Whether to execute \"cd $path\" when you switch between opened files"
 msgstr ""
 "Выполнять ли \"cd $path\", когда вы переключаетесь между открытыми файлами"
@@ -2222,7 +2221,6 @@ msgid "Other:"
 msgstr "Прочие:"
 
 #: ../src/about.c:48
-#, fuzzy
 msgid ""
 "Copyright (c)  2005-2015\n"
 "Colomban Wendling\n"
@@ -2232,7 +2230,7 @@ msgid ""
 "Frank Lanitz\n"
 "All rights reserved."
 msgstr ""
-"Copyright (c)  2005-2014\n"
+"Copyright (c)  2005-2015\n"
 "Colomban Wendling\n"
 "Nick Treleaven\n"
 "Matthew Brush\n"
@@ -2348,12 +2346,13 @@ msgstr ""
 "(нажмите Ctrl+C или Enter, чтобы очистить терминал)."
 
 #: ../src/build.c:912
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute terminal command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Не могу выполнить утилиту grep '%s'; проверьте путь, заданный в настройках."
+"Не могу выполнить команду \"%s\": %s. Проверьте правильность пути в "
+"настройках."
 
 #: ../src/build.c:1020
 msgid "Compilation failed."
@@ -2535,19 +2534,17 @@ msgstr "Не удалось открыть файл %s (файл не найде
 
 #: ../src/callbacks.c:1473
 msgid "Check the path setting in Filetype configuration."
-msgstr ""
+msgstr "Проверьте правильность пути в настройках типов файлов."
 
 #: ../src/callbacks.c:1478
-#, fuzzy
 msgid "Check the path setting in Preferences."
-msgstr ""
-"Не могу выполнить утилиту grep '%s'; проверьте путь, заданный в настройках."
+msgstr "Проверьте правильность пути в настройках."
 
 #. G_SHELL_ERROR is parsing error, it may be caused by %s word with quotes
 #: ../src/callbacks.c:1491
-#, fuzzy, c-format
+#, c-format
 msgid "Cannot execute context action command \"%s\": %s. %s"
-msgstr "Не удалось выполнить внешнюю команду '%s' (%s)."
+msgstr "Не удалось выполнить команду контекстного действия \"%s\": %s. %s"
 
 #: ../src/dialogs.c:160 ../src/document.c:2308 ../src/document.c:2373
 #: ../src/document.c:2381
@@ -2798,7 +2795,7 @@ msgstr ", только чтение"
 
 #: ../src/document.c:1627
 msgid "Discard history"
-msgstr ""
+msgstr "Сброс истории"
 
 #: ../src/document.c:1628
 msgid ""
@@ -2807,11 +2804,14 @@ msgid ""
 "will not be displayed again but Your choice can be changed in the various "
 "preferences."
 msgstr ""
+"Предыдущее состояние буфера находится в истории и отмена действия "
+"восстанавливает его. Вы можете отключить данное поведение, выполняя сброс "
+"истории при перезагрузке. Данное сообщение не будет отображаться повторно, но "
+"ваш выбор может быть изменён в настройках \"Разное\"."
 
 #: ../src/document.c:1632
-#, fuzzy
 msgid "The file has been reloaded."
-msgstr "Документ закрыт."
+msgstr "Файл был загружен заново."
 
 #: ../src/document.c:1662
 msgid "Any unsaved changes will be lost."
@@ -3920,9 +3920,8 @@ msgid "Switch to Document"
 msgstr "Перейти к документу"
 
 #: ../src/notebook.c:451
-#, fuzzy
 msgid "Open in New _Window"
-msgstr "Открыть в _Geany"
+msgstr "Открыть в новом _окне"
 
 #: ../src/plugins.c:223
 #, c-format
@@ -3943,6 +3942,9 @@ msgid ""
 "<i>Other plugins depend on this. Disable them first to allow deactivation.</"
 "i>\n"
 msgstr ""
+"\n"
+"<i>Этот модуль нужен для работы других. Отключите сначала зависимые модули.</"
+"i>\n"
 
 #. Four allocations is less than ideal but meh
 #: ../src/plugins.c:1602
@@ -4111,12 +4113,13 @@ msgstr ""
 "%s"
 
 #: ../src/printing.c:615
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute print command \"%s\": %s. Check the path setting in "
 "Preferences."
 msgstr ""
-"Не могу выполнить утилиту grep '%s'; проверьте путь, заданный в настройках."
+"Не могу запустить команду печати \"%s\": %s. Проверьте правильность пути в "
+"настройках."
 
 #: ../src/printing.c:622
 #, c-format
@@ -4464,11 +4467,11 @@ msgid "%s %s -- %s (in directory: %s)"
 msgstr "%s %s -- %s (в каталоге: %s)"
 
 #: ../src/search.c:1718
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute grep tool \"%s\": %s. Check the path setting in Preferences."
 msgstr ""
-"Не могу выполнить утилиту grep '%s'; проверьте путь, заданный в настройках."
+"Не могу запустить утилиту grep \"%s\": %s. Проверьте правильность пути в настройках."
 
 #: ../src/search.c:1758
 #, c-format
@@ -4508,9 +4511,8 @@ msgstr ""
 "Дальнейшее продолжение работы невозможно."
 
 #: ../src/spawn.c:90 ../src/spawn.c:140 ../src/spawn.c:184
-#, fuzzy
 msgid "Text ended before matching quote was found"
-msgstr "Не найдена парная кавычка для %c. (Текст команды: '%s')"
+msgstr "Текст команды завершился до того, как была найдена парная кавычка"
 
 #. TL note: from glib
 #: ../src/spawn.c:126
@@ -4523,18 +4525,16 @@ msgstr ""
 "Экранированная команда Windows должна быть полностью заключена в кавычки"
 
 #: ../src/spawn.c:254
-#, fuzzy
 msgid "Program not found"
-msgstr "Команда '%s' не найдена"
+msgstr "Программа не найдена"
 
 #: ../src/spawn.c:668
-#, fuzzy
 msgid "Failed to change to the working directory"
-msgstr "Ошибка: не указан рабочий каталог"
+msgstr "Не удалось сменить рабочий каталог"
 
 #: ../src/spawn.c:673
 msgid "Unknown error executing child process"
-msgstr ""
+msgstr "Неизвестная ошибка при запуске дочернего процесса"
 
 #: ../src/stash.c:1150
 msgid "Name"
@@ -4931,6 +4931,8 @@ msgid ""
 "Cannot execute command \"%s\" from the template: %s. Check the path in the "
 "template."
 msgstr ""
+"Не удалось запустить команду \"%s\" из шаблона: %s. Проверьте корректность "
+"пути в шаблоне."
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:58
@@ -5106,12 +5108,13 @@ msgid "The executed custom command exited with an unsuccessful exit code."
 msgstr "Выполненная команда пользователя завершилась с ошибкой."
 
 #: ../src/tools.c:242
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Cannot execute custom command \"%s\": %s. Check the path setting in Custom "
 "Commands."
 msgstr ""
-"Не могу выполнить утилиту grep '%s'; проверьте путь, заданный в настройках."
+"Не удалось выполнить пользовательскую команду \"%s\": %s. Проверьте "
+"правильность пути в пользовательских командах."
 
 #: ../src/tools.c:357 ../src/tools.c:620
 msgid "Set Custom Commands"
