--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Geany 1.26 (unreleased)
 
     Internationalization
-    * Updated translations: de, el, es, fr, kk, pt, sv
+    * Updated translations: de, el, es, fr, kk, pt, sv, ru
 
 
 Geany 1.25 (July 12, 2015)
