--- a/tests/ctags/3526726.tex
+++ b/tests/ctags/3526726.tex
@@ -553,7 +553,7 @@ available.
 
 As for OS selection, use what you like. When we implement Data Acquisition
 Plugin's in Snort 2.0 this may become more of a factor, but for now I'm hearing
-about a lot of people seeing alot of success using Snort on Solaris, Linux,
+about a lot of people seeing a lot of success using Snort on Solaris, Linux,
 *BSD and Windows 2000. Personally, I develop Snort on FreeBSD and Sourcefire
 uses OpenBSD for our sensor appliance OS, but I've been hearing some good
 things about the RedHat Turbo Packet interface (which would require mods for
@@ -640,7 +640,7 @@ these steps at your OWN risk.
 \item In a command prompt, run 'ipconfig' to verify the interface does not have an IP bound to it.
 \end{enumerate}
 
-If you do not recieve an IP address listing from the interface you
+If you do not receive an IP address listing from the interface you
 modified, you are good to go.  To run snort with the specified interface,
 use the -i flag such as 'snort -v -d -p -i1'
  
@@ -1604,7 +1604,7 @@ were detected by snort when a communications session attempt fails.
 
 The default order that the rules are applied in is alerts first, then pass
 rules, then log rules. This ordering ensures that you don't write 50 great
-alert rules and then disable them all accidently with an errant pass rule. If
+alert rules and then disable them all accidentally with an errant pass rule. If
 you really want to change this order so that the pass rules are applied first,
 use the ``-o'' command line switch, or the ``order'' config directive.
 
@@ -2403,7 +2403,7 @@ Try this script to archive the files:
   * []#!/bin/sh
 
     # 
-    # Logfile rotation script for snort writen by jameso@elwood.net.
+    # Logfile rotation script for snort written by jameso@elwood.net.
     # 
     # This script is pretty basic. We start out by setting some vars.
     # Its job is tho rotate the days logfiles, e-mail you with what 
@@ -2464,7 +2464,7 @@ Try this script to archive the files:
     fi
     
     # Move the log files into todays log dir. This is done with
-    # a for loop right now, because I am afriad that if alot is
+    # a for loop right now, because I am afriad that if a lot is
     # logged there may be to many items to move with a "mv *"
     # type command. There may a better way to do this, but I don't
     # know it yet.
@@ -2706,7 +2706,7 @@ adapter basically mediating the 10 up to 100 and vice versa.
 The bad thing about hubs that {\em don't} have this ``feature,'' is that
 in order to support 10bt devices, they throttle the entire hub speed
 down to 10bt if there is one or more 10bt only devices hooked up to it.
-I have seen this behavior (and did the bandwidth tests to proove it) on
+I have seen this behavior (and did the bandwidth tests to prove it) on
 old 3com office connect 10/100 hubs (newer ones do the 2 hubs with a switch
 thing.)  So, the point of what I am saying is, since these old hubs have
 no switching capabilities, and they don't know which port the traffic is
@@ -2752,7 +2752,7 @@ traffic (telnet,http for example).  You set up a port to mirror
 traffic from the ports that have the devices your interested in to the
 port you have your analysis device plugged into.  Without doing so,
 you don't see the unicast conversations because the traffic is getting
-"switched" accross the backplane so pc on port 1 talks to server on
+"switched" across the backplane so pc on port 1 talks to server on
 port 2 and no other ports get this traffic. If server on port 2
 broadcasts or multicasts, the information is flooded out all ports.
 (multicast can be controlled on some switches so only those ports that
@@ -2763,7 +2763,7 @@ An excellent book on the topic is Interconnections by Radia Perlman.
 (Bridges and Routers).
   
 Additional caveat: if you deal with full duplex on a switched port,
-only a tap would save you - users have succesfully used Shomiti's
+only a tap would save you - users have successfully used Shomiti's
 ones on 100MB FD ports, and used two Snort instances, capturing
 traffic on both directions. Port mirroring didn't work in that case ...
 
