--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Geany 1.27 (unreleased)
 
     Internationalization
-    * Updated translations: de, it, ja, lt
+    * Updated translations: de, it, ja, lt, pt
 
 
 Geany 1.26 (November 15, 2015)
