Small update of the French translation

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Geany 1.27 (unreleased)
 
     Internationalization
-    * Updated translations: de, es, it, ja, kk, lt, pt
+    * Updated translations: de, es, fr, it, ja, kk, lt, pt
 
 
 Geany 1.26 (November 15, 2015)
