--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,8 @@
 Geany 1.27 (unreleased)
 
     Internationalization
-    * Updated translations: de, es, fr, it, ja, kk, lt, pt
+    * Updated translations: de, es, fr, it, ja, kk, lt, nl, pt, ru, sk,
+                            zh_CN
 
 
 Geany 1.26 (November 15, 2015)
